force-app/main/default/objects/RC_SMS_Job_Template__c/RC_SMS_Job_Template__c.object-meta.xml
<CustomObject>
    <label>RC SMS Job Template</label>
    <nameField>
        <displayFormat>RCJT-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC SMS Job Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>