force-app/main/default/objects/RC_SMS_Job_Template__c/fields/Before__c.field-meta.xml
<CustomField>
    <fullName>Before__c</fullName>
    <label>Before</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>