force-app/main/default/objects/RC_SMS_Job_Template__c/fields/SMS_Sequence_Template__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sequence_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SMS Sequence</label>
    <referenceTo>RC_SMS_Sequence_Template__c</referenceTo>
    <relationshipName>SMS_Job_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>